@@ -1,0 +1,2 @@
+# Application version number
+APP_VERSION = "0.1"
