@@ -84,7 +84,7 @@
         {% block footer %}
         <div class="container">
             <footer>
-                <p class="pull-right">{% comment %} put footer copyright text here {% endcomment %}</p>
+                <p class="pull-right">Clear Linux Dissector version {{ app_version }}</p>
             </footer>
         </div>
         {% endblock %}
